--- a/adoptionRequestsListShelter.html
+++ b/adoptionRequestsListShelter.html
@@ -19,7 +19,7 @@
 
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="homeShelter.html">
                 <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
             </a>
         </div>
@@ -32,30 +32,311 @@
     </header>
 
     <main>
+        <div class="top-adoption">
+            <h1 class="text-center josefinsans-normal-white-30px">Solicitudes de adopción</h1>
+        </div>
+        <div class="rectangle-background-adoption">
+        </div>
         <div class="d-flex justify-content-center flex-column">
-            <button type="button" class="collapsible container-fluid">Gnocchi</button>
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/perro_2.jpg" alt="" class="image-pet" style="width:90px;">
+                Gnocchi
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
             <div class="content container-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat.</p>
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
             </div>
-            <button type="button" class="collapsible container-fluid">Apolo</button>
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/perro_4.jpg" alt="" class="image-pet" style="width:90px;">
+                Apolo
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
             <div class="content container-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat.</p>
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
             </div>
-            <button type="button" class="collapsible container-fluid">Lucy</button>
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/gato_5.jpg" alt="" class="image-pet" style="width:90px;">
+                Lucy
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
             <div class="content container-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat.</p>
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
             </div>
-            <button type="button" class="collapsible container-fluid">Jacinta</button>
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/gato_13.jpg" alt="" class="image-pet" style="width:90px;">
+                Jacinta
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
             <div class="content container-fluid">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                    ex ea commodo consequat.</p>
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
             </div>
         </div>
     </main>
