--- a/adoptionRequestsListUser.html
+++ b/adoptionRequestsListUser.html
@@ -12,10 +12,238 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱 || Solicitudes</title>
+    <title>Pawchontli 🐶🐱 || Mis solicitudes de adopción </title>
 </head>
 
 <body>
+
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
+            </a>
+        </div>
+        <nav class="nav-bar">
+            <a href="favouritePet.html">
+                <img src="assets/svg/heart.svg" class="heart" alt="">
+            </a>
+            <img src="assets/svg/menu.svg" class="menu" alt="">
+        </nav>
+    </header>
+
+    <main>
+        <div class="top-adoption">
+            <h1 class="text-center josefinsans-normal-white-30px">Mis solicitudes de adopción</h1>
+        </div>
+        <div class="rectangle-background-adoption">
+        </div>
+        <div class="d-flex justify-content-center flex-column">
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/gato_5.jpg" alt="" class="image-pet" style="width:90px;">
+                Lucy
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
+            <div class="content container-fluid">
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
+            </div>
+            <button type="button" class="collapsible container-fluid d-flex align-items-center justify-content-between">
+                <img src="assets/img/gato_13.jpg" alt="" class="image-pet" style="width:90px;">
+                Jacinta
+                <img src="assets/svg/arrowdownwhite.svg" alt="" class="arrow-white" style="width: 1.5em;">
+            </button>
+            <div class="content container-fluid">
+                <div class="d-flex flex-column pt-3">
+                    <p class="josefinsans-chetwode-blue-18px">FECHA DE SOLICITUD</p>
+                    <p>13/04/2021</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">NOMBRE DEL ADOPTANTE</p>
+                    <p>Victoria Robertson</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">ESTATUS</p>
+                    <p>Activa.</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <p class="josefinsans-chetwode-blue-18px">FORMULARIO DE ADOPCIÓN</p>
+                    <p class="question">¿Actualmente tienes
+                        animales?</p>
+                    <p>Sí.</p>
+                    <p class="question">¿Cuáles?</p>
+                    <p>Un perro.</p>
+                    <p class="question">¿Anteriormente has
+                        tenido otros animales?</p>
+                    <p>Sí, un gato.</p>
+                    <p class="question">¿Qué fue lo que
+                        pasó con ellos?</p>
+                    <p>Falleció por cáncer.</p>
+                    <p class="question">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?</p>
+                    <p>Sí.</p>
+                    <p class="question">
+                        Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </p>
+                    <p>Buscaría un departamento donde acepten mascotas para llevarlo conmigo.</p>
+                    <p class="question">
+                        ¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </p>
+                    <p>15 años.</p>
+                    <p class="question">
+                        ¿Dónde dormirá el
+                        adoptado?
+                    </p>
+                    <p>Conmigo.</p>
+                    <p class="question">
+                        ¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </p>
+                    <p>Tal vez una hora diaria.</p>
+                    <p class="question">
+                        En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </p>
+                    <p>No tengo.</p>
+                    <p class="question">
+                        ¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </p>
+                    <p>Yo.</p>
+                    <p class="question">
+                        ¿Tienes un médico
+                        veterinario de cabecera?
+                    </p>
+                    <p>Sí.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-wrap pb-4 justify-content-around">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -23,6 +251,25 @@
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
     <script src="js/main.js"></script>
+
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+            coll[i].addEventListener("click", function () {
+                this.classList.toggle("active");
+                var content = this.nextElementSibling;
+                if (content.style.display === "block") {
+                    content.style.display = "none";
+                } else {
+                    content.style.display = "block";
+                }
+            });
+        }
+
+    </script>
+
 </body>
 
 </html>
