--- a/profileShelterEdit.html
+++ b/profileShelterEdit.html
@@ -16,19 +16,22 @@
 </head>
 
 <body>
-
     <header>
-        <div class="logo">
-            <a href="homeShelter.html">
-                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
-            </a>
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="homeShelter.html">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <a href="adoptionRequestsListShelter.html">
+                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
+                </a>
+                <button>
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
+            </div>
         </div>
-        <nav class="nav-bar">
-            <a href="adoptionRequestsListShelter.html">
-                <img src="assets/svg/clipboard.svg" class="heart" alt="">
-            </a>
-            <img src="assets/svg/menu.svg" class="menu" alt="">
-        </nav>
     </header>
 
     <main>
@@ -39,13 +42,13 @@
                 <div class="detail-top pt-1">
                     <img src="assets/img/shelterImage.jpg" alt="" class="shelter-image" style="width: 15em;">
                     <a href="updateShelter.html">
-                        <img src="assets/svg/editwhite.svg" alt="" class="edit" style="width: 3em;">
+                        <img src="assets/svg/editwhite.svg" alt="" class="edit" style="width: 2em;">
                     </a>
                 </div>
                 <div class="info-shelter d-flex flex-column">
                     <h2 class="josefinsans-normal-black-30px d-flex justify-content-center">Refugio San Gregorio</h2>
                     <a href="updateShelter.html">                    
-                        <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 3em;">
+                        <img src="assets/svg/edit.svg" alt="" class="edit pb-4"  style="width: 2em;">
                     </a>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5">
