--- a/updatePet.html
+++ b/updatePet.html
@@ -16,19 +16,21 @@
 </head>
 
 <body>
-    
-
     <header>
-        <div class="logo">
-            <a href="homeShelter.html">
-                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
-            </a>
-        </div>
-        <div class="nav-bar">
-            <a href="adoptionRequestsListShelter.html">
-                <img src="assets/svg/clipboard.svg" class="heart" alt="">
-            </a>
-            <img src="assets/svg/menu.svg" class="menu" alt="">
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="homeShelter.html">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <a href="adoptionRequestsListShelter.html">
+                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
+                </a>
+                <button>
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
+            </div>
         </div>
     </header>
 
