--- a/adoptionForm.html
+++ b/adoptionForm.html
@@ -16,165 +16,179 @@
 </head>
 
 <body>
-
     <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
-            </a>
-        </div>
-        <nav class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
-            </a>
-            <img src="assets/svg/menu.svg" class="menu" alt="">
-        </nav>
-    </header>
-
-    <main class="adoption-form">
-        <div class="top-background">
-            <div class="background-orange"></div>
-            <div class="rectangle-background"></div>
-            <div class="close">
-                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="index.html">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <a href="favouritePet.html">
+                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
+                </a>
+                <button>
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
             </div>
         </div>
+    </header>
 
-        <div class="title">
-            <h1 class="josefinsans-normal-black-30px">Formulario de <br />adopción</h1>
+    <main>
+        <div class="top-background">
+            <div class="rectangle-background container-fluid"></div>
+            <div class="close">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="" style="width: 3em;">
+            </div>
         </div>
-
-        <form action="" method="" class="group-form" id="adoption-form">
-            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
-                <li>
-                    <label for="inputText"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Actualmente tienes
-                        animales?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText2"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuáles?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText3"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Anteriormente has
-                        tenido otros animales?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText4"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué fue lo que
-                        pasó con ellos?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText5"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Todas las personas
-                        en
-                        casa están de acuerdo en adoptar?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText6" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
-                        por algún motivo
-                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText7"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuántos años crees
-                        que
-                        vive un perro o gato en promedio?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText8"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde dormirá el
-                        adoptado?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText9"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuánto tiempo
-                        pasará
-                        solo?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText10"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">En caso de tener
-                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText11"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Quién será el
-                        responsable y se hará cargo de cubrir los gastos del adoptado?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <li>
-                    <label for="inputText12"
-                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Tienes un médico
-                        veterinario de cabecera?
-                    </label>
-                    <input type="text"
-                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
-                </li>
-                <br>
-                <p class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap align-content-center">
-                    Es importante que estés consciente
-                    que los animales necesitan visitas
-                    periódicas al veterinario, vacunación,
-                    desparasitación, limpieza, uso de
-                    collar con placa de identificación,
-                    una correcta alimentación y espacio
-                    para poder vivir felices.
-                </p>
-                <li class="checkbox-form">
-                    <input type="checkbox" class="" id="checkbox-form">
-                    <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">De acuerdo.
-                    </label>
-                </li>
-                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
-            </ul>
-        </form>
+        <div class="adoption-form">
+            <h1 class="title josefinsans-normal-black-30px text-center py-5">Formulario de <br />adopción</h1>
+            <div class="d-flex justify-content-center align-content-center align-items-center">
+                <form action="" method="">
+                    <div  class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Actualmente
+                            tienes
+                            animales?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText2"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuáles?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText3"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Anteriormente has
+                            tenido otros animales?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText4"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué fue
+                            lo que
+                            pasó con ellos?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText5"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Todas las
+                            personas
+                            en
+                            casa están de acuerdo en adoptar?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText6"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
+                            por algún motivo
+                            tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText7"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuántos
+                            años crees
+                            que
+                            vive un perro o gato en promedio?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText8"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde
+                            dormirá el
+                            adoptado?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText9"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuánto
+                            tiempo
+                            pasará
+                            solo?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText10"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">En caso
+                            de tener
+                            empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText11"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Quién
+                            será el
+                            responsable y se hará cargo de cubrir los gastos del adoptado?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="base-form d-flex flex-column justify-content-center">
+                        <label for="inputText12"
+                            class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Tienes
+                            un médico
+                            veterinario de cabecera?
+                        </label>
+                        <input type="text"
+                            class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue container-fluid">
+                    </div>
+                    <br>
+                    <div class="checkbox-form base-form d-flex flex-column">
+                        <p class="form-label josefinsans-normal-chetwode-blue-20px">
+                            Es importante que estés consciente
+                            que los animales necesitan visitas
+                            periódicas al veterinario, vacunación,
+                            desparasitación, limpieza, uso de
+                            collar con placa de identificación,
+                            una correcta alimentación y espacio
+                            para poder vivir felices.
+                        </p>
+                        <div class="d-flex flex-row align-items-center justify-content-center">
+                            <input type="checkbox" class="" id="checkbox-form">
+                            <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">De acuerdo.
+                            </label>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+                        </div>
+                    </div>
+                </form> 
+            </div>
+        </div>
     </main>
-    
+
     <footer text-center>
         <div class="top-footer">
             <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
