--- a/profileShelter.html
+++ b/profileShelter.html
@@ -18,17 +18,21 @@
 <body>
 
     <header>
-        <div class="logo">
-            <a href="index.html">
-                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
-            </a>
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="index.html">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <a href="favouritePet.html">
+                    <img src="assets/svg/heart.svg" class="heart" alt="" style="width: 2em;">
+                </a>
+                <button>
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
+            </div>
         </div>
-        <nav class="nav-bar">
-            <a href="favouritePet.html">
-                <img src="assets/svg/heart.svg" class="heart" alt="">
-            </a>
-            <img src="assets/svg/menu.svg" class="menu" alt="">
-        </nav>
     </header>
 
     <main>
