--- a/profileUser.html
+++ b/profileUser.html
@@ -18,66 +18,53 @@
 <body>
 
     <header>
-        <div class="logo">
-            <a href="homeShelter.html">
-                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
-            </a>
+        <div class="nav-bar d-flex flex-row align-items-center justify-content-between px-3">
+            <div>
+                <a href="homeShelter.html">
+                    <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="" style="width: 5em;">
+                </a>
+            </div>
+            <div>
+                <a href="adoptionRequestsListShelter.html">
+                    <img src="assets/svg/clipboard.svg" class="clipboard" alt="" style="width: 2em;">
+                </a>
+                <button>
+                    <img src="assets/svg/menu.svg" class="menu" alt="" style="width: 2em;">
+                </button>
+            </div>
         </div>
-        <nav class="nav-bar">
-            <a href="adoptionRequestsListShelter.html">
-                <img src="assets/svg/clipboard.svg" class="heart" alt="">
-            </a>
-            <img src="assets/svg/menu.svg" class="menu" alt="">
-        </nav>
     </header>
 
     <main>
-        <div class="detail-shelter">
+        <div class="detail-user">
             <div class="detail-top pt-1">
             </div>
-            <div class="shelter-text rectangle-background">
+            <div class="user-text rectangle-background">
                 <div class="detail-top pt-1">
-                    <img src="assets/img/userImage.jpg" alt="" class="shelter-image" style="width: 15em;">
+                    <img src="assets/img/userImage.jpg" alt="" class="user-image" style="width: 15em;">
                 </div>
-                <div class="info-shelter d-flex flex-column">
+                <div class="info-user d-flex flex-column">
                     <h2 class="josefinsans-normal-black-30px d-flex justify-content-center pb-3">Victoria Robertson</h2>
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5">
+                            <div class="age">
+                                <p class="josefinsans-chetwode-blue-18px">EDAD</p>
+                                <p>27 años</p>
+                            </div>
+                            <div class="ocupation">
+                                <p class="josefinsans-chetwode-blue-18px">OCUPACIÓN</p>
+                                <p>Historiadora del arte</p>
+                            </div>
                             <div class="location">
                                 <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                <p>Felipe Carrillo puerto #400, Alberto Zamora, Coyoacán, 04000, CDMX.</p>
-                            </div>
-                            <div class="phone">
-                                <p class="josefinsans-chetwode-blue-18px">TELÉFONO</p>
-                                <p>5523423453</p>
-                            </div>
-                            <div class="web">
-                                <p class="josefinsans-chetwode-blue-18px">WEB</p>
-                                <a href="https://refugiosangregorio.com">
-                                    <p>www.refugiosangregorio.com</p>
-                                </a>
+                                <p>Coyoacán, 04000, CDMX.</p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-wrap justify-content-center px-5">
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Somos un refugio que sobrevive de donativos y ayuda de almas caritativas.
-                                    Amplios jardines, paseos, atención individualizada, cariño y supervisión continua para tu todos ellos.
-                                    Cuidamos a más de 200 perros y constantemente rescatamos a más.</p>
+                                <p>Soy amante de los animales, busco un gato con quien compartir mi vida.</p>
                             </div>
-                        </div>
-                        <div class="user-actions d-flex justify-content-center pt-5">
-                            <form action="https://www.paypal.com/donate" method="post" target="_top"
-                                class="button-donation">
-                                <input type="hidden" name="business" value="princessna11@hotmail.com" />
-                                <input type="hidden" name="item_name" value="Pawchontli" />
-                                <input type="hidden" name="currency_code" value="MXN" />
-                                <input type="image" src="assets/svg/button-donation-shelter.svg" border="0" name="submit style"
-                                    title="PayPal - The safer, easier way to pay online!"
-                                    alt="Donate with PayPal button" style="width: 10em;" />
-                                <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
-                                    height="1" />
-                            </form>
                         </div>
                     </div>
                 </div>
